--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.2.0",
+    "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "next": "14.2.18",
     "react": "^18",
