--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "formik": "^2.4.6",
     "next": "14.2.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
